--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -16,23 +16,8 @@
   }
 }
 
-body {
-  /* color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb)); */
-}
-
 /* Bg configs */
 .background-gradient::before {
-  background: radial-gradient(
-    20% 50% at 50% 35%,
-    rgba(181, 0, 125,0.5) 0%,
-    rgba(250, 249, 249, 1) 100%
-  );
   z-index: -10;
   content: "";
   position: absolute;
@@ -55,16 +40,18 @@ body {
 }
 
 .sky-button-gradient {
-  background: linear-gradient(to right, rgb(255, 158, 0) 0%, rgb(255, 0, 0) 25%, rgb(181, 0, 125) 50%, rgb(33, 66, 156) 75%, rgb(0, 113, 255) 100%);
+  background: linear-gradient(
+    to right,
+    rgb(255, 158, 0) 0%,
+    rgb(255, 0, 0) 25%,
+    rgb(181, 0, 125) 50%,
+    rgb(33, 66, 156) 75%,
+    rgb(0, 113, 255) 100%
+  );
 }
 
 @media (max-width: 800px) {
   .background-gradient::before {
-    background: radial-gradient(
-      35% 35% at 50% 30%,
-      rgba(181, 0, 125,0.5) 0%,
-      rgba(250, 249, 249, 1) 100%
-    );
     z-index: -10;
     content: "";
     position: absolute;
@@ -79,4 +66,9 @@ body {
     font-size: 2.25rem; /* 36px */
     line-height: 2.5rem; /* 40px */
   }
+}
+
+.background-container {
+  background-image: url("../../public/background.jpg");
+  background-size: 100% 70%;
 }
